# scenic-route

./: .gitignore  .scalafix.conf  .scalafmt.conf  CLAUDE.md  DECISIONS.md  JOURNAL.md  LICENSE  Makefile  PROGRESS.md  README.md  SPEC.md  build.sbt
.github/workflows/: ci.yml
areas/: berlin-80km.poly  berlin.toml
pipeline/: make_clip_polygon.py  pyproject.toml  requirements.txt  score_area.py
pipeline/scoring/: __init__.py  blend.py  cqi.py  features.py  io_osm.py  pipeline.py  scenic.py  sidepath.py  store.py  tags.py
pipeline/tests/: conftest.py  test_blend.py  test_cqi_sidepath.py  test_features.py  test_lts.py  test_make_clip_polygon.py  test_pipeline_smoke.py  test_scenic_overlap.py  test_store.py  test_tags.py
project/: plugins.sbt
scripts/: clip.sh  fetch.sh
src/main/scala/scenicroute/: AreaConfig.scala  LatLon.scala  Main.scala  Route.scala  Router.scala
src/test/resources/fixtures/: test-area.toml  test.osm.xml
src/test/scala/scenicroute/: AreaConfigTest.scala  RouterTest.scala  SmokeTest.scala
